Finished episod Object-Oriented Forms. Add Errors class in js, axios for ajax request

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,5 +7,6 @@
 
 // Bootstrap
 //@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
+//@import "variables.sass";
+//$turquoise:    hsl(358, 93%, 46%) !default;
 @import "node_modules/bulma/bulma.sass";
